# Gnome-Jump

./: CMakeLists.txt  README.md
data/: settings.json
data/img/: Thumbs.db
data/img/background/: Thumbs.db
data/img/ui/: HighGravityIcon.pdn  Thumbs.db
src/: GameObjects.cpp  GameObjects.h  GameSelect.cpp  GameSelect.h  GnomeGame.sublime-workspace  UIObjects.cpp  UIObjects.h  datatypes.h  fireworks.cpp  fireworks.h  game.cpp  game.h  gameover.cpp  gameover.h  globals.cpp  instructions.h  main.cpp  mainmenu.cpp  mainmenu.h  pause.cpp  pause.h  resourceManager.cpp  resourceManager.h  settingsLoader.cpp  settingsLoader.h
